# HermesMobileCommand

./: .gitignore  README.md
gateway/: README.md  pyproject.toml
gateway/scripts/: e2e_operator_capabilities_smoke.py  e2e_smoke.py  hermes_runtime_e2e.py  mobile_realness_demo.py  real_hermes_desktop_probe.py  runtime_integration_smoke.py
gateway/src/hermes_gateway/: __init__.py  app.py  capabilities.py  capability_registry.py  clearance_contract.py  clearance_policy.py  config.py  handoff.py  hermes_adapter.py  ids.py  local_binding.py  main.py  notification_composer.py  push.py  runtime_adapter.py  runtime_client.py  schemas.py  security.py  signing.py  store.py  tui.py
gateway/src/hermes_gateway/routers/: __init__.py  identity.py  observability.py
gateway/src/hermes_gateway/storage/: __init__.py  identity.py  (+1 more)
gateway/tests/: conftest.py  test_act00311_enrollment_boundary.py  test_act0031_authority_core.py  test_approvals.py  test_bb_seam_characterization.py  test_bb_seam_contract.py  test_binding_controls.py  test_capability_registry.py  test_clearance_channel_policy.py  test_clearance_chokepoint.py  test_clearance_contract.py  test_contract.py  test_cors.py  test_handoff_chokepoint.py  test_handoff_tiering.py  test_hermes_adapter.py  test_interventions.py  test_mobile_readiness.py  test_models.py  test_notifications.py  test_operator_capabilities.py  test_p256_signing.py  test_pairing.py  test_push.py  test_runtime_adapter.py  test_runtime_client.py  test_runtime_integration.py  test_signing.py  test_tui.py  test_tui_relay.py  test_websocket.py
(+168 files in other folders)
