[project]
name = "agentic-control-tower"
version = "0.1.0"
description = "Agentic Control Tower gateway"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "cryptography>=46.0.0",
  "fastapi>=0.136.0",
  "pydantic>=2.13.0",
  "uvicorn[standard]>=0.38.0",
]

[dependency-groups]
dev = [
  "httpx>=0.28.0",
  "pytest>=9.0.0",
  "pyyaml>=6.0.0",
  "ruff>=0.14.0",
]

[project.scripts]
tower = "hermes_gateway.main:main"
hermes-mobile-gateway = "hermes_gateway.main:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
